WebView unit test crashes in 32-bit mode

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • Environment:

      Windows 7 or 10 64-bit OS with 32-bit JDK 9 + latest FX 9-dev
      Oracle Linux 7 64-bit OS with 32-bit JDK 9 + latest FX 9-dev

    • web

      The WebView callback unit test crashes when running on a 32-bit build of JDK 9 (both Windows and Linux) with the latest FX 9-dev. All tests pass with a 64-bit build.

      This is a regression after the fix for JDK-8164792.

            Assignee:
            Murali Billa
            Reporter:
            Kevin Rushforth
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: