8170930: WebView unit test crashes in 32-bit mode

Reviewed-by: kcr, ghb